# mandelbrot-shader

./: CMakeLists.txt  LICENSE  README.md
resources/: Mandelbrot.frag  Mandelbrot.vert
src/: ErrorHandling.cpp  ErrorHandling.h  Main.cpp  ReadFile.cpp  ReadFile.h
